add hello world

--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<html>
 <center>
-<button onclick="writeCookies()">Write Cookies</button>
-<button onclick="readCookies()">Read Cookies</button>
+<p>Hellow world</p>
+<p><button onclick="writeCookies()">Write Cookies</button></p>
+<p><button onclick="readCookies()">Read Cookies</button></p>
 <p id="demo"></p>
 </center>
 
@@ -13,3 +15,4 @@ function readCookies() {
     document.getElementById("demo").innerHTML = document.cookie;
 }
 </script>
+</html>
