--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <p>Hellow world</p>
 <p><button onclick="writeCookies()">Write Cookies</button></p>
 <p><button onclick="readCookies()">Read Cookies</button></p>
-<p id="demo"></p>
+<p id="demo">demo</p>
 </center>
 
 <script>
