Added enrollment link

--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@ function readCookies() {
 </script>
 </head>
 <body>
+<p><a href="https://enterprise.google.com/android/enroll?et=QVMBRZQPIZDOFPMBFVEO">Enroll my device</a></p>
+<p><a href="https://enterprise.google.com/android/enroll/invalid">Invalid token</a></p>
 <p>cname: <input type="text" id="cname" value=""></p>
 <p>cvalue: <input type="text" id="cvalue" value=""></p>
 <p><button onclick="writeCookies()">Write cookie</button></p>
