--- a/index.html
+++ b/index.html
@@ -3,54 +3,27 @@
 <head>
 <script>
 
-function setCookie(cname,cvalue,exdays) {
-    var d = new Date();
-    d.setTime(d.getTime() + (exdays*24*60*60*1000));
-    var expires = "expires=" + d.toGMTString();
-    document.cookie = cname + "=" + cvalue + ";" + expires + ";path=/";
+function getParameterByName(name, url) {
+    if (!url) url = window.location.href;
+    name = name.replace(/[\[\]]/g, '\\$&');
+    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
+        results = regex.exec(url);
+    if (!results) return null;
+    if (!results[2]) return '';
+    return decodeURIComponent(results[2].replace(/\+/g, ' '));
 }
 
-function getCookie(cname) {
-    var name = cname + "=";
-    var decodedCookie = decodeURIComponent(document.cookie);
-    var ca = decodedCookie.split(';');
-    for(var i = 0; i < ca.length; i++) {
-        var c = ca[i];
-        while (c.charAt(0) == ' ') {
-            c = c.substring(1);
-        }
-        if (c.indexOf(name) == 0) {
-            return c.substring(name.length, c.length);
-        }
-    }
-    return "";
-}
-
-function writeCookies() {
-    setCookie(document.getElementById("cname").value, document.getElementById("cvalue").value, 30);
-}
-
-
-function readCookies() {
-    document.getElementById("cvalue_r").value = getCookie(document.getElementById("cname_r").value);
-}
-
-function testJS() {
-    document.getElementById("test_js").value = "JavaScript is working";
+function generateEnrollmentLink() {
+    var enrollmentToken = getParameterByName("et");
+    var text = "Enroll my device";
+    var result = text.link("https://enterprise.google.com/android/enroll?et=" + enrollmentToken);
+    document.getElementById("enrollMyDevice").innerHTML = result;
 }
 
 </script>
 </head>
-<body>
-<p><a href="https://enterprise.google.com/android/enroll?et=QVMBRZQPIZDOFPMBFVEO">Enroll my device</a></p>
+<body onload="generateEnrollmentLink()">
+<p id="enrollMyDevice"></p>
 <p><a href="https://enterprise.google.com/android/enroll/invalid">Invalid token</a></p>
-<p>cname: <input type="text" id="cname" value=""></p>
-<p>cvalue: <input type="text" id="cvalue" value=""></p>
-<p><button onclick="writeCookies()">Write cookie</button></p>
-<p>cname: <input type="text" id="cname_r" value=""></p>
-<p>cvalue: <input type="text" id="cvalue_r" value="" readonly=""></p>
-<p><button onclick="readCookies()">Read Cookies</button></p>
-<p><input type="text" id="test_js" value="" readonly=""></p>
-<p><button onclick="testJS()">Test JS</button></p>
 </body>
 </html>
