Add button to launch enrollment link via javascript

--- a/index.html
+++ b/index.html
@@ -20,12 +20,19 @@ function generateEnrollmentLink() {
     document.getElementById("enrollMyDevice").innerHTML = result;
 }
 
+function launchEnrollmentLink() {
+        var enrollmentToken = getParameterByName("et");
+    var text = "Enroll my device";
+    window.open("https://enterprise.google.com/android/enroll?et=" + enrollmentToken, '_self');
+}
+
 </script>
 </head>
 <body onload="generateEnrollmentLink()">
 <h1>
 <p id="enrollMyDevice"></p>
 <p><a href="https://enterprise.google.com/android/enroll/invalid">Invalid token</a></p>
+ <button onclick="launchEnrollmentLink()">Invalid token via JS</button> 
 </h1>
 </body>
 </html>
