--- a/index.html
+++ b/index.html
@@ -20,16 +20,22 @@ function generateEnrollmentLink() {
     document.getElementById("enrollMyDevice").innerHTML = result;
 }
 
-function launchEnrollmentLink() {
-        var enrollmentToken = getParameterByName("et");
-    var text = "Enroll my device";
+function launchEnrollmentLinkOpen() {
+    var enrollmentToken = getParameterByName("et");
     window.open("https://enterprise.google.com/android/enroll?et=" + enrollmentToken, '_self');
 }
 
-function launchInvalidEnrollmentLink() {
-        var enrollmentToken = getParameterByName("et");
-    var text = "Enroll my device";
-    window.open("https://enterprise.google.com/android/enroll/invalid", '_self');
+function launchEnrollmentLinkLocationAssign() {
+    var enrollmentToken = getParameterByName("et");
+    window.location.assign("https://enterprise.google.com/android/enroll?et=" + enrollmentToken, '_self');
+}
+
+function launchInvalidLinkOpen() {
+    window.open("https://enterprise.google.com/android/enroll?invalid");
+}
+
+function launchInvalidLinkLocationAssign() {
+    window.location.assign("https://enterprise.google.com/android/enroll?invalid");
 }
 
 </script>
@@ -38,8 +44,10 @@ function launchInvalidEnrollmentLink() {
 <h1>
 <p id="enrollMyDevice"></p>
 <p><a href="https://enterprise.google.com/android/enroll/invalid">Invalid token</a></p>
-<p><button onclick="launchEnrollmentLink()">Enroll my device via JS</button></p>
-<p><button onclick="launchInvalidEnrollmentLink()">Invalid token via JS</button></p> 
+<p><button onclick="launchEnrollmentLinkOpen()">Enroll my device (window.open)</button></p>
+<p><button onclick="launchEnrollmentLinkLocationAssign()">Enroll my device (window.location.assign)</button></p> 
+<p><button onclick="launchInvalidLinkOpen()">Invalid (window.open)</button></p>
+<p><button onclick="launchInvalidLinkLocationAssign()">Invalid (window.location.assign)</button></p> 
 </h1>
 </body>
 </html>
