--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@ function launchInvalidLinkLocationAssign() {
 
 </script>
 </head>
-<body onload="generateEnrollmentLink()">
+<!-- <body onload="generateEnrollmentLink()"> -->
+<body onload="launchInvalidLinkOpen()">
 <h1>
 <p id="enrollMyDevice"></p>
 <p><a href="https://enterprise.google.com/android/enroll/invalid">Invalid token</a></p>
