Add '_self' when opening invalid link

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@ function launchEnrollmentLinkLocationAssign() {
 }
 
 function launchInvalidLinkOpen() {
-    window.open("https://enterprise.google.com/android/enroll?invalid");
+    window.open("https://enterprise.google.com/android/enroll?invalid", '_self');
 }
 
 function launchInvalidLinkLocationAssign() {
-    window.location.assign("https://enterprise.google.com/android/enroll?invalid");
+    window.location.assign("https://enterprise.google.com/android/enroll?invalid", '_self');
 }
 
 </script>
