Revert testing changes

--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@ function launchInvalidLinkLocationAssign() {
 
 </script>
 </head>
-<!-- <body onload="generateEnrollmentLink()"> -->
-<body onload="launchInvalidLinkOpen()">
+<body onload="generateEnrollmentLink()">
 <h1>
 <p id="enrollMyDevice"></p>
 <p><a href="https://enterprise.google.com/android/enroll/invalid">Invalid token</a></p>
