--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function launchCloudDpcGithub() {
     window.open(enrollmentLink, '_self');
 }
 
-function launchEnrollmentLinkWithDelay() {
+async function launchEnrollmentLinkWithDelay() {
     await sleep(5000);
     var enrollmentToken = new URL(window.location.href).searchParams.get('et');
     if (enrollmentToken != null) {
