--- a/index.html
+++ b/index.html
@@ -43,6 +43,20 @@ async function launchEnrollmentLinkWithDelay() {
     window.open(enrollmentLink, '_self');
 }
 
+async function launchCloudDpcGithubWithDelay() {
+    var delay = new URL(window.location.href).searchParams.get('delay');
+    if (delay != null) {
+        await sleep(delay);
+    }
+    var enrollmentToken = new URL(window.location.href).searchParams.get('et');
+    if (enrollmentToken != null) {
+        enrollmentLink = 'https://clouddpc.github.io/?et=' + enrollmentToken;
+    } else {
+        enrollmentLink = 'https://clouddpc.github.io/invalid';
+    }
+    window.open(enrollmentLink, '_self');
+}
+
 function sleep(ms) {
   return new Promise(resolve => setTimeout(resolve, ms));
 }
@@ -54,6 +68,7 @@ function sleep(ms) {
 <p><a href="https://enterprise.google.com/android/enroll/invalid">Invalid token</a></p>
 <p><button onclick="launchEnrollmentLink()">launchEnrollmentLink</button></p>
 <p><button onclick="launchEnrollmentLinkWithDelay()">launchEnrollmentLinkWithDelay</button></p>
+<p><button onclick="launchCloudDpcGithubWithDelay()">launchCloudDpcGithubWithDelay</button></p>
 </h1>
 </body>
 </html>
