Make HTML exactly the same

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ function sleep(ms) {
 <p><button onclick="launchEnrollmentLink()">launchEnrollmentLink</button></p>
 <p><button onclick="launchEnrollmentLinkWithDelay()">launchEnrollmentLinkWithDelay</button></p>
 <p><button onclick="launchCloudDpcGithubWithDelay()">launchCloudDpcGithubWithDelay</button></p>
-<a href="http://enterprise.google.com/android/enroll?et=ABCDEFGH">PLease click here to continue...</a>
+<a class="jCf37b" id="redirectLink" href="https://enterprise.google.com/android/enroll?et=ABCDEFGH">Please click here to continue...</a>
 </h1>
 </body>
 </html>
