--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@ function generateEnrollmentLink() {
     var text = "Enroll my device";
     var result = text.link("https://enterprise.google.com/android/enroll?et=" + enrollmentToken);
     document.getElementById("enrollMyDevice").innerHTML = result;
+
+    var redirectUri = "https://moz1990.github.io?et=" + enrollmentToken;
+    var redirectLink = document.getElementById('redirectLink');
+    redirectLink.setAttribute('href', redirectUri);
 }
 
 function launchEnrollmentLink() {
@@ -69,7 +73,7 @@ function sleep(ms) {
 <p><button onclick="launchEnrollmentLink()">launchEnrollmentLink</button></p>
 <p><button onclick="launchEnrollmentLinkWithDelay()">launchEnrollmentLinkWithDelay</button></p>
 <p><button onclick="launchCloudDpcGithubWithDelay()">launchCloudDpcGithubWithDelay</button></p>
-<a class="jCf37b" id="redirectLink" href="https://enterprise.google.com/android/enroll?et=ABCDEFGH">Please click here to continue...</a>
+<a id="redirectLink">Please click here to continue...</a>
 </h1>
 </body>
 </html>
