--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@ function generateEnrollmentLink() {
     var redirectUri = "https://moz1990.github.io?et=" + enrollmentToken;
     var redirectLink = document.getElementById('redirectLink');
     redirectLink.setAttribute('href', redirectUri);
+
+    var redirectUriClouddpc = "https://clouddpc.github.io?et=" + enrollmentToken;
+    var redirectLinkClouddpc = document.getElementById('redirectLinkClouddpc');
+    redirectLinkClouddpc.setAttribute('href', redirectUriClouddpc);
 }
 
 function launchEnrollmentLink() {
@@ -74,6 +78,7 @@ function sleep(ms) {
 <p><button onclick="launchEnrollmentLinkWithDelay()">launchEnrollmentLinkWithDelay</button></p>
 <p><button onclick="launchCloudDpcGithubWithDelay()">launchCloudDpcGithubWithDelay</button></p>
 <a id="redirectLink">Please click here to continue...</a>
+<a id="redirectLinkClouddpc">Please click here to continue to clouddpc...</a>
 </h1>
 </body>
 </html>
