--- a/index.html
+++ b/index.html
@@ -2,31 +2,6 @@
 <html>
 <head>
 <script>
-function getParameterByName(name, url) {
-    if (!url) url = window.location.href;
-    name = name.replace(/[\[\]]/g, '\\$&');
-    var regex = new RegExp('[?&]' + name + '(=([^&#]*)|&|#|$)'),
-        results = regex.exec(url);
-    if (!results) return null;
-    if (!results[2]) return '';
-    return decodeURIComponent(results[2].replace(/\+/g, ' '));
-}
-
-function generateEnrollmentLink() {
-    var enrollmentToken = getParameterByName("et");
-    var text = "Enroll my device";
-    var result = text.link("https://enterprise.google.com/android/enroll?et=" + enrollmentToken);
-    document.getElementById("enrollMyDevice").innerHTML = result;
-
-    var redirectUri = "https://moz1990.github.io?et=" + enrollmentToken;
-    var redirectLink = document.getElementById('redirectLink');
-    redirectLink.setAttribute('href', redirectUri);
-
-    var redirectUriClouddpc = "https://clouddpc.github.io?et=" + enrollmentToken;
-    var redirectLinkClouddpc = document.getElementById('redirectLinkClouddpc');
-    redirectLinkClouddpc.setAttribute('href', redirectUriClouddpc);
-}
-
 function launchEnrollmentLink() {
     var enrollmentToken = new URL(window.location.href).searchParams.get('et');
     if (enrollmentToken != null) {
@@ -51,16 +26,16 @@ async function launchEnrollmentLinkWithDelay() {
     window.open(enrollmentLink, '_self');
 }
 
-async function launchCloudDpcGithubWithDelay() {
+async function launchPlayEnrollmentLink() {
     var delay = new URL(window.location.href).searchParams.get('delay');
     if (delay != null) {
         await sleep(delay);
     }
     var enrollmentToken = new URL(window.location.href).searchParams.get('et');
     if (enrollmentToken != null) {
-        enrollmentLink = 'https://clouddpc.github.io/?et=' + enrollmentToken;
+        enrollmentLink = 'https://play.google.com/managed/enroll?et=' + enrollmentToken;
     } else {
-        enrollmentLink = 'https://clouddpc.github.io/invalid';
+        enrollmentLink = 'https://play.google.com/managed/enroll/invalid';
     }
     window.open(enrollmentLink, '_self');
 }
@@ -70,15 +45,11 @@ function sleep(ms) {
 }
 </script>
 </head>
-<body onload="generateEnrollmentLink()">
+<body>
 <h1>
-<p id="enrollMyDevice"></p>
-<p><a href="https://enterprise.google.com/android/enroll/invalid">Invalid token</a></p>
 <p><button onclick="launchEnrollmentLink()">launchEnrollmentLink</button></p>
 <p><button onclick="launchEnrollmentLinkWithDelay()">launchEnrollmentLinkWithDelay</button></p>
-<p><button onclick="launchCloudDpcGithubWithDelay()">launchCloudDpcGithubWithDelay</button></p>
-<a id="redirectLink">Please click here to continue...</a>
-<a id="redirectLinkClouddpc">Please click here to continue to clouddpc...</a>
+<p><button onclick="launchPlayEnrollmentLink()">launchPlayEnrollmentLink</button></p>
 </h1>
 </body>
 </html>
